BB-19929: Long icon labels are not displayed correctly on mobile devices

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/components/frontend-datagrid.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/components/frontend-datagrid.scss
@@ -153,7 +153,8 @@
 
                     .action {
                         color: $frontend-datagrid-has-swipe-action-cell-tablet-icon-color;
-                        white-space: $frontend-datagrid-has-swipe-action-cell-tablet-white-space;
+
+                        @include ellipsis();
 
                         &-row {
                             display: $frontend-datagrid-has-swipe-action-cell-tablet-row-display;
